filer/private/sass/layout/_main.scss
// #MAIN LAYOUT#

html,
body {
    height: 100% !important;
}

body {
    overflow-x: auto;
    min-width: 400px !important;
}
.text-left {
    text-align: left;
}
.text-right {
    text-align: right;
}
.clearfix:after {
    content: "";
    display: table;
    clear: both;
}
// make sure that tiny styles like on size info has correct font size and color #666
.tiny {
    font-size: $font-size-small !important;
    color: $gray-light !important;
}

.image-info {
    position: relative;
    float: right;
    box-sizing: border-box;
    width: 28%;
    margin-top: 0;
    border: 0;
    border-radius: 3px;
    background: #fff;
    box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
    .image-details,
    .actions-list {
        margin: 0;
        padding: 0;
        &.image-details {
            margin: 10px 0;
            padding: 0 10px;
        }
        li {
            list-style-type: none;
        }
        a {
            cursor: pointer;
        }
    }
    &.image-info-detail {
        @include clearfix();
        position: static;
        float: none;
        width: 100%;
        margin-bottom: 20px;
        padding: 25px;
        border-radius: 0;
        .image-details-left {
            float: left;
        }
        .image-details-right {
            float: left;
        }
        .icon {
            font-size: 18px;
        }
        .image-details,
        .actions-list {
            margin-top: 0;
            border: 0 !important;
            &.image-details {
                margin-top: 20px;
                margin-bottom: 15px;
                padding: 0;
            }
            dt {
                float: left;
                color: #808080;
                font-size: 13px;
                font-weight: normal;
            }
            dd {
                color: $gray;
                font-size: 13px;
                padding-left: 80px;
            }
            .text {
                font-size: 13px;
                margin-right: 15px;
                strong {
                    font-size: 13px;
                }
            }
            li {
                color: $gray;
                font-size: 13px !important;
                font-weight: normal !important;
                padding: 1px 0 !important;
                border: 0 !important;
            }
            a {
                padding: 0;
            }
        }
        .image-info-title {
            overflow: hidden;
            color: $gray;
            white-space: nowrap;
            text-overflow: ellipsis;
            padding: 0 0 5px;
            .icon {
                float: left;
                margin-right: 5px;
            }
        }
        .image-preview-container {
            text-align: left;
            margin: 20px 0 0;
            padding: 0;
            > img {
                margin-bottom: 15px;
            }
        }
        .actions-list {
            .icon {
                font-size: 16px;
                &:last-child {
                    float: none;
                }
            }
        }
    }
}

.image-info-close {
    position: absolute;
    top: -10px;
    right: -7px;
    font-size: 20px;
    cursor: pointer;
}

.image-info-title {
    padding: 5px 10px;
    border-bottom: solid 1px $gray-lighter;
    a {
        margin-left: 5px;
    }
}
.image-preview-container {
    text-align: center;
    margin: 10px 0;
    padding: 0 10px;
    .image-preview {
        position: relative;
        float: left;
        margin: 0 15px 0 0;
        margin-bottom: 15px;
    }
}
.cropper-container {
    float: left;
}
.cropper-preview-container {
    float: left;
    width: 300px;
}
.cropper-preview {
    float: left;
    overflow: hidden;
    margin: 0 10px 10px 0;
    img {
        max-width: 100%;
    }
}
.cropper-preview-lg {
    width: 180px;
    height: 100px;
}
.cropper-preview-md {
    width: 100px;
    height: 50px;
}
.cropper-preview-sm {
    width: 50px;
    height: 30px;
}
.cropper-preview-xs {
    width: 30px;
    height: 30px;
}
.full-size {
    clear: both;
}
.actions-list-dropdown {
    a {
        display: block;
        padding: 5px 10px;
    }
    .caret-down {
        display: inline-block;
    }
    .caret-right {
        display: none;
    }
    &.js-collapsed {
        border-bottom: solid 1px $gray-lighter;
        .caret-down {
            display: none;
        }
        .caret-right {
            display: inline-block;
        }
    }
}
.actions-list {
    border-top: solid 1px $gray-lighter;
    &:last-child {
        border-top: none;
        a {
            border-bottom: none;
        }
    }
    a {
        display: block;
        padding: 5px 10px;
        border-bottom: solid 1px $gray-lighter;
    }
    .icon {
        &:first-child {
            width: 20px;
        }
        &:last-child {
            float: right;
            margin-top: 3px;
        }
    }
}

@media screen and (max-width: 768px) {
    .image-info {
        float: none;
        width: 100%;
    }
}

.filter-files-container {
    position: relative;
    margin: 0;
    padding: 0;
    background: none;
    box-shadow: none;
    .dropdown-container {
        position: absolute;
        top: 0;
        right: 42px;
        > a {
            &,
            &:visited,
            &:link:visited,
            &:link {
                display: inline-block;
                line-height: 42px;
                text-align: center;
                width: 42px;
                height: 42px;
            }
        }
    }
}
.filter-files {
    color: $gray-darkest;
    font-size: 14px;
    line-height: 42px;
    box-sizing: border-box;
    width: 100%;
    height: 42px;
    padding: 0 30px 0 20px !important;
    border-left: 0 !important;
    border-radius: 0;
    outline: none;

    appearance: none;
}
/* ... */

